--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "dependencies": {
     "@prisma/client": "^5.11.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "i": "^0.3.7",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "npm": "^10.5.0",
     "validator": "^13.11.0"
   },
